--- a/main.html
+++ b/main.html
@@ -7,10 +7,38 @@
 </head>
 
 <body>
+
+<nav>
+   <li role="listitem"><a href="#aboutproject">About Proj</a></li>
+   <li role="listitem"><a href="#listenaudios">listen Audios</a></li>
+   <li role="listitem"><a href="#listofAudios">list Audios </a></li>
+</nav>
+
+	<section>
+		<h1>Random audios</h1>
+  
+<audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+    </audio>
+    <br>
+
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    </audio>
+    <br>
+
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+    </audio>
+
+
+
+		
+	</section
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	
 </body>
 
 </html>
