--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-	<ul>
+<ul>
    <li role="listitem"><a href="#aboutproject">About Proj</a></li>
    <li role="listitem"><a href="#listenaudios">listen Audios</a></li>
    <li role="listitem"><a href="#listofAudios">list Audios </a></li>
@@ -21,6 +21,7 @@
   
 <audio controls>
       <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+	  Your browser does not support the audio element.
     </audio>
     <br>
 
