--- a/main.html
+++ b/main.html
@@ -8,13 +8,14 @@
 
 <body>
 
-<nav>
-<ul>
-   <li role="listitem"><a href="#aboutproject">About Proj</a></li>
-   <li role="listitem"><a href="#listenaudios">listen Audios</a></li>
-   <li role="listitem"><a href="#listofAudios">list Audios </a></li>
-	</ul>
-</nav>
+ <nav>
+    <ul>
+      <li><a href="https://example.com/home">Home</a></li>
+      <li><a href="https://example.com/about">About</a></li>
+      <li><a href="https://example.com/contact">Contact</a></li>
+    </ul>
+  </nav>
+	
 
 	<section>
 		<h1>Text: 3 random audios</h1>
